--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 body {
-    background-image: url("../img/boot.jpg");
+    background-image: url("../img/mountain.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
